[build-system]
requires = ["setuptools >= 77.0.0", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
target-version = ["py39", "py310", "py311", "py312", "py313"]
required-version = 24

[tool.ruff]
line-length = 79
target-version = "py39"
exclude = ["templates"]
