[metadata]
name = oracledb
version = attr: oracledb.version.__version__
description = Python interface to Oracle Database
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Oracle, database
author = Anthony Tuininga
author_email = anthony.tuininga@oracle.com
url = https://oracle.github.io/python-oracledb
license = Apache and/or UPL
license_files =
    LICENSE.txt
    THIRD_PARTY_LICENSES.txt
    NOTICE.txt
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: Free To Use But Restricted
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Cython
    Topic :: Database

[options]
zip_safe = false
python_requires = >=3.6
setup_requires = cython
install_requires = cryptography>=3.4
test_suite = tests
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.package_data]
* = py.typed
