[metadata]
name = oracledb
version = attr: oracledb.version.__version__
description = Python interface to Oracle Database
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Oracle, database
author = Anthony Tuininga
author_email = anthony.tuininga@oracle.com
url = https://oracle.github.io/python-oracledb
project_urls =
    Installation = https://python-oracledb.readthedocs.io/en/latest/user_guide/installation.html
    Samples = https://github.com/oracle/python-oracledb/tree/main/samples
    Documentation = http://python-oracledb.readthedocs.io
    Release Notes = https://python-oracledb.readthedocs.io/en/latest/release_notes.html
    Issues = https://github.com/oracle/python-oracledb/issues
    Source = https://github.com/oracle/python-oracledb
license = UPL-1.0 OR Apache-2.0
license_files =
    LICENSE.txt
    THIRD_PARTY_LICENSES.txt
    NOTICE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Cython
    Topic :: Database

[options]
zip_safe = false
python_requires = >=3.9
setup_requires = cython>=3.0.10
install_requires = cryptography>=3.2.1
test_suite = tests
packages =
    oracledb
    oracledb.plugins
    oracledb.interchange
package_dir =
    =src

[options.packages.find]
where = src

[options.package_data]
* = py.typed
